# 7zip-qt

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  BuildOptions.cmake  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: CMakeLists.txt
src/7zSFX/: CMakeLists.txt  main.cpp  original_runtime_anchor.cpp
src/apps/: CMakeLists.txt
src/apps/7zFM/: CMakeLists.txt  file_open_support.cpp  file_open_support.h  main.cpp
src/apps/7zG/: CMakeLists.txt  cli_bridge.cpp  cli_bridge.h  main.cpp
src/archive_application/: CMakeLists.txt
src/archive_application/include/: archive_error.h  archive_large_pages.h  archive_session.h  archive_types.h  archive_types_base.h  archive_types_benchmark.h  archive_types_extract.h  archive_types_hash.h  archive_types_properties.h  compress_format_catalog.h  descript_ion_store.h  native_archive_session_registry.h
src/archive_application/src/ports/: archive_backend_port.h
src/archive_application/src/runtime/: archive_session.cpp  archive_session_core.cpp  archive_session_core.h  archive_session_event_sink.cpp  archive_session_event_sink.h  archive_session_helpers.cpp  archive_session_helpers.h  archive_session_interactions.cpp  archive_session_interactions.h  archive_session_memory_gate.cpp
src/archive_application/src/support/: archive_error.cpp  descript_ion_store.cpp
src/common/: CMakeLists.txt
src/common/include/common/: archive_type_normalization.h  ascii_text.h  basename_validation.h  path_text_normalization.h  tmp_diagnostic_log.h
src/i18n/: CMakeLists.txt
src/i18n/include/: json_localization.h
src/i18n/resources/: z7_strings_en.json  z7_strings_zh-CN.json
src/i18n/src/: json_localization.cpp  json_localization_internal.h
src/i18n/src/resources/: z7_i18n_resources.qrc
src/macos_integration/: CMakeLists.txt
src/macos_integration/capi/: internal.h  macos_integration_c_api_archive_runtime.cpp  macos_integration_c_api_common.cpp  macos_integration_c_api_environment.cpp  macos_integration_c_api_error_fallback.cpp  macos_integration_c_api_menu_action.cpp  macos_integration_c_api_menu_helpers.cpp  macos_integration_c_api_menu_helpers.h  macos_integration_c_api_menu_plan.cpp  macos_integration_c_api_nested_session.cpp  macos_integration_c_api_password.cpp  macos_integration_c_api_quicklook_batch_export.cpp  macos_integration_c_api_quicklook_list.cpp  macos_integration_c_api_session.cpp  macos_integration_c_api_task.cpp  macos_integration_c_api_task_state.cpp  password_relay_delegate.cpp  password_relay_delegate.h
src/macos_integration/config/: macos_integration_config.cpp
src/macos_integration/include/: macos_integration_c_api.h  macos_integration_config.h  macos_launch_services.h  macos_native_drag.h
src/macos_integration/launch_services/: CMakeLists.txt  macos_launch_services.mm
src/macos_integration/native_drag/src/: drag_drop_native_macos.cpp  drag_drop_native_macos_concurrency.cpp  (+4 more)
src/macos_integration/xcode_project/: .gitignore  project.yml
src/qt_application_support/: CMakeLists.txt
src/qt_application_support/include/: app_startup_qt.h  drag_drop_policy_qt.h  filemanager_instance_launcher.h  portable_settings.h  settings_store_qt.h
src/qt_application_support/src/: app_startup_qt.cpp  drag_drop_policy_qt.cpp  filemanager_instance_launcher.cpp  portable_settings.cpp  portable_settings_internal.cpp  portable_settings_internal.h  settings_store_qt.cpp
src/shared_runtime/: CMakeLists.txt  shared_runtime_stub.cpp
src/shell_integration/: CMakeLists.txt
src/shell_integration/include/: shell_integration_menu.h
src/shell_integration/menu/: internal.h  shell_integration_menu.cpp  shell_integration_menu_helpers.cpp  shell_integration_menu_plan.cpp
src/task_ipc_runtime/: CMakeLists.txt
src/task_ipc_runtime/include/: task_ipc_runtime.h
src/task_ipc_runtime/src/: task_ipc_runtime_bootstrap.cpp  task_ipc_runtime_completion.cpp  task_ipc_runtime_dispatch_claim.cpp  task_ipc_runtime_internal.h  task_ipc_runtime_payload.cpp
src/ui/: CMakeLists.txt
src/ui/archive_support/: CMakeLists.txt
src/ui/common/: CMakeLists.txt
src/ui/filemanager/: CMakeLists.txt
src/ui/gui/: CMakeLists.txt
src/ui/runtime_support/: CMakeLists.txt
src/ui/widgets/: CMakeLists.txt
tests/: CMakeLists.txt
tests/app_logic/: CMakeLists.txt
tests/app_logic/hash_behavior/: benchmark.cpp  cases_benchmark_split.cpp  cases_events_mapping.cpp  cases_extract_budget.cpp  cases_extract_materialized_paths.cpp  cases_extract_output_helpers.cpp  cases_fileop_models.cpp  cases_fileop_models_overwrite.cpp  cases_get_entry_info.cpp  cases_list_streaming.cpp  cases_nested_archive_sessions.cpp  cases_update_mode.cpp  internal.h  main.cpp  matrix_coverage.cpp  operation_outcome_matrix.json  setup.cpp  setup_hash.cpp  setup_helpers.cpp  setup_list.cpp  setup_list_followups.cpp
tests/filemanager/: CMakeLists.txt
tests/filemanager/behavior/: archive.cpp  archive_commands.cpp  archive_flow.cpp  archive_flow_navigation.cpp  archive_open.cpp  archive_open_platform_tracking.cpp  benchmark.cpp  cases_hash_dialog.cpp  cases_sevenzip_menu.cpp  context_menu.cpp  drag_drop.cpp  drag_drop_archive_source.cpp  drag_drop_effect_report.cpp  drag_drop_internal_source.cpp  drag_drop_internal_source_mixed.cpp  drag_drop_internal_source_preview.cpp  drag_drop_right_button.cpp  internal.h  main.cpp  runner_archive_embedded.cpp  runner_extract_command.cpp  runner_open_behavior.cpp  runner_path.cpp  runner_task.cpp  runtime.cpp  runtime_options.cpp  runtime_options_language.cpp  runtime_toolbar.cpp  runtime_view.cpp  setup.cpp  setup_capability.cpp  setup_favorites.cpp  setup_helpers_archive.cpp  setup_helpers_ui.cpp  setup_temp_files.cpp  setup_temp_files_root_filter.cpp  startup_open.cpp  temp_files_dialog.cpp
tests/gui_matrix/: CMakeLists.txt  gui_behavior_matrix.json
tests/gui_matrix/matrix/: internal.h  main.cpp  matrix.cpp
tests/shell_integration/: CMakeLists.txt
tests/shell_integration/behavior/: main.cpp
tests/smoke/: CMakeLists.txt  smoke.cpp
tests/support/fake_launcher_binary/: CMakeLists.txt  launcher_wrapper.sh.in  main.cpp
(+349 files in other folders)
