if(Z7_THIRD_PARTY_ROOT STREQUAL "${CMAKE_CURRENT_SOURCE_DIR}/third_party")
  add_subdirectory(third_party)
else()
  add_subdirectory("${Z7_THIRD_PARTY_ROOT}" "${CMAKE_CURRENT_BINARY_DIR}/third_party")
endif()
add_subdirectory(common)
add_subdirectory(archive_application)
if(APPLE)
  add_subdirectory(macos_integration/launch_services)
endif()
add_subdirectory(i18n)
add_subdirectory(qt_application_support)
add_subdirectory(task_ipc_runtime)
add_subdirectory(shell_integration)
if(APPLE AND Z7_ENABLE_MACOS_INTEGRATION)
  add_subdirectory(macos_integration)
endif()
add_subdirectory(ui)
add_subdirectory(7zSFX)
add_subdirectory(shared_runtime)
add_subdirectory(apps)
